# Machine-Learning

./: README.md  pyproject.toml
data/: Métrica do KS.xlsx  dados_estudo_nota.xlsx  dados_frutas.xlsx  dados_ks.xlsx
proj-ks/: ks_metric.ipynb  ks_metric.py
proj-modelo-classificação/: classificacao.ipynb  classificacao.py
proj-modelo-regressão/: estudo-notas.ipynb  estudo_notas.py
proj-tree-fruta/: frutas.py  proj-tree-fruta.ipynb
proj-tree-star-wars/: clones.ipynb  clones.py
