

[project]
name = "machine-learning"
version = "0.1.0"
description = ""
authors = [
    {name = "Ludovina Magalhaes", email = "lagmagalhaes@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pandas (>=2.2.3,<3.0.0)", "notebook (>=7.3.2,<8.0.0)", "ipykernel (>=6.29.5,<7.0.0)", "openpyxl (>=3.1.5,<4.0.0)", "matplotlib (>=3.10.1,<4.0.0)", "scikit-learn (>=1.6.1,<2.0.0)", "numpy (>=2.2.3,<3.0.0)", "pyarrow (>=19.0.1,<20.0.0)", "fastparquet (>=2024.11.0,<2025.0.0)", "feature-engine (>=1.8.3,<2.0.0)", "scikit-plot (==0.3.7)", "scipy (>=1.15.2,<2.0.0)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

